--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Pin Tab Links",
+	"name": "Pinned Tab Links",
 	"version": "1.0",
 	"description": "Force links in a pinned tab to open in a new tab when they point to another domain.",
 	"background_page": "background.html",
